KrViewer: reenforce QTabWidget shortcuts for tab switching

FIXED: [ 195749 ] Ctrl+Tab don't switch over edited files
BUG: 195749

Ctrl+Tab and Ctrl+Shift+Tab are actually default QTabWidget shortcuts
that are implemented via keyPressEvent method. When editor is placed on
a tab, it intercepts the key presses for itself. This is why KrViewer
understands the shortcuts fine if all tabs are Lister or other read-only
tabs. If there are Editor tabs, you can switch between tabs normally until
you hit an Editor tab and then it acts as Tab and Shift+Tab correspondingly.

This change enforces the shortcuts through
KActionCollection::setDefaultShortcuts which take precedence over
the editor shortcuts.

Differential Revision: https://phabricator.kde.org/D10734